# pupnow

./: .gitignore  LICENSE  README.md  pup-db.csv  pyproject.toml
src/pupnow/: config.py  database.py  main.py  models.py
src/pupnow/setup/: db-seed.py
tests/: conftest.py  test_main.py
