[project]
name = "pupnow"
version = "0.1.0"
description = ""
authors = [
    {name = "Kome Fumi",email = "komefumi@protonmail.ch"}
]
packages = [{include = "pupnow", from = "src"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "pyrsistent (>=0.20.0,<0.21.0)",
    "requests (>=2.32.5,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
